applicationset/cyberchef/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
spec:
  gateways:
  - istio-system/default-gateway
  hosts:
  - gateway.proxmox.homelab
  http:
  - match:
    - uri:
        prefix: /cyberchef
    rewrite:
      uri: /
    route:
    - destination:
        host: cyberchef-application.default.svc.cluster.local
        port:
          number: 3000
